# iLQR

./: .gitignore  CMakeLists.txt  DDPData.hpp  DDPHelperFunction.hpp  DDPSetting.hpp  HessianCorrection.hpp  Types.hpp  iLQR.cpp  iLQR.hpp
Approximation/: ChangeOfInputVariables.hpp  LinearApproximation.hpp  LinearQuadraticApproximator.hpp  QuadraticApproximation.hpp
AugmentedLagrangian/: StateAugmentedLagrangian.hpp  StateAugmentedLagrangianCollection.hpp  StateAugmentedLagrangianInterface.hpp  StateInputAugmentedLagrangian.hpp  StateInputAugmentedLagrangianCollection.hpp  StateInputAugmentedLagrangianInterface.hpp
Constraint/: ConstraintOrder.hpp  StateConstraint.hpp  StateInputConstraint.hpp
Controller/: Controller.hpp  LinearController.hpp
Cost/: Cost.hpp  CostCollection.hpp  QuadraticStateCost.hpp
Dynamics/: Dynamics.hpp  LinearSystemDynamics.hpp  SystemDynamicsBase.hpp
Initialization/: DefaultInitializer.hpp  Initializer.hpp  OperatingPoints.hpp
Integration/: Integration.hpp  Observer.hpp  RungeKuttaDormandPrince5.hpp  SensitivityIntegrator.hpp  TrapezoidalIntegration.hpp
IntrusiveList/: IntrusiveList.hpp
Misc/: LinearAlgebra.hpp  LinearInterpolation.hpp  NumericTraits.hpp  Numerics.hpp
OptimalControl/: DualSolution.hpp  LagrangianMetrics.hpp  Metrics.hpp  ModelData.hpp  Multiplier.hpp  OptimalControlProblem.hpp  OptimalControlProblemHelperFunction.hpp  PerformanceIndex.hpp  PrimalSolution.hpp  ProblemMetrics.hpp  Reference.hpp
Penalties/: AugmentedPenaltyBase.hpp  ModifiedRelaxedBarrierPenalty.hpp  Penalty.hpp  QuadraticPenalty.hpp  SlacknessSquaredHingePenalty.hpp  SmoothAbsolutePenalty.hpp
RiccatiEquations/: DiscreteTimeRiccatiEquations.hpp  RiccatiModification.hpp
Rollout/: InitializerRollout.hpp  RolloutBase.hpp  TimeTriggeredRollout.hpp
SearchStrategy/: LineSearchStrategy.hpp  SearchStrategyBase.hpp  SearchStrategySettings.hpp
Tests/: CMakeLists.txt  LinearSystemTest.cpp
